Try to fix the description page on mobile

--- a/docs/data/css/base.css
+++ b/docs/data/css/base.css
@@ -187,6 +187,7 @@ img {
     .text-and-image .text {
         max-width: 100%;
         margin-left: 0;
+        margin-top: 10px;
     }
 
 }
